# Mangifera

./: .gitignore  .gitmodules  CMakeLists.txt  Mangifera.cpp  README.md
.claude/: settings.local.json
app/: CMakeLists.txt  application.cpp  application.hpp
app/headless/: headless_runner.cpp  headless_runner.hpp
app/ibl/: ibl_generator.cpp  ibl_generator.hpp  tinyexr_impl.cpp
app/post_process/: post_process_manager.cpp  post_process_manager.hpp
app/render_core/: frame_context.hpp  frame_pipeline.cpp  frame_pipeline.hpp  render_graph.cpp  render_graph.hpp  render_pass_node.hpp  render_scene.cpp  render_scene.hpp  render_scene_extractor.cpp  render_scene_extractor.hpp  render_targets.hpp  run_mode.hpp  sensor_output.hpp
app/render_features/passes/: depth_prepass.cpp  depth_prepass.hpp  sensor_export_pass.cpp  sensor_export_pass.hpp
app/render_features/passes/post/: bloom_pass.cpp  bloom_pass.hpp  tonemap_pass.cpp  tonemap_pass.hpp
app/renderer/: renderer.cpp  renderer.hpp
app/shaders/: brdf_lut.comp  equirect_to_cubemap.comp  irradiance.comp  pbr.frag  pbr.vert  prefilter.comp  procedural_sky.comp  shadow.vert  skybox.frag  skybox.vert
app/shaders/post/: bloom_composite.comp  bloom_downsample.comp  bloom_upsample.comp  composite.comp  fullscreen_blit.frag  fullscreen_blit.vert  histogram_average.comp  hiz_generate.comp  luminance_histogram.comp  lut_generate.comp  sh_probe_bake.comp  ssao.comp  ssao_upsample.comp  ssr_trace.comp  ssr_upsample.comp  tonemapping.comp  volumetric_light.comp  volumetric_upsample.comp
app/window/: window.cpp  window.hpp
cmake/: add_imgui.cmake
core/: CMakeLists.txt
core/base/: entity.hpp  gardener.hpp  twig.hpp
core/data-struct/: freelist.hpp  grove.hpp  scene-node.hpp  singleton.hpp
core/log/: historiographer.cpp  historiographer.hpp
core/manager/: scene-graph.cpp  scene-graph.hpp  scene-manager.cpp  scene-manager.hpp  whole-manager.hpp  world.cpp  world.hpp
core/math/: math.hpp
core/ns/: archetype.hpp  freelist.hpp  scene-node.hpp
core/physics/: physics_world.hpp
core/resource/: camera.cpp  camera.hpp  light.hpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  physics_body.hpp  primitives.cpp  primitives.hpp  transform.cpp  transform.hpp
docs/plans/: 2026-03-07-rendering-engine-design.md  2026-03-11-mangifera-architecture-review-and-roadmap-design.md
graphics/: CMakeLists.txt  desingn.md  device.hpp
graphics/backends/vulkan/: CMakeLists.txt  vk-device.cpp  vk-device.hpp
graphics/backends/vulkan/vulkan-command-execution/: vk-command-buffer.cpp  vk-command-buffer.hpp  vk-command-pool.cpp  vk-command-pool.hpp  vk-command-queue.cpp  vk-command-queue.hpp
graphics/backends/vulkan/vulkan-pipeline-state/: vk-compute-pipeline-state.cpp  vk-compute-pipeline-state.hpp  vk-graphics-pipeline-state.cpp  vk-graphics-pipeline-state.hpp  vk-pipeline-layout.cpp  vk-pipeline-layout.hpp  vk-raytracing-pipeline-state.cpp  vk-raytracing-pipeline-state.hpp
graphics/backends/vulkan/vulkan-render-pass/: vk-framebuffer.cpp  vk-framebuffer.hpp  vk-render-pass.cpp  vk-render-pass.hpp  vk-swapchain.cpp  vk-swapchain.hpp
graphics/backends/vulkan/vulkan-render-resource/: vk-buffer.cpp  vk-buffer.hpp  vk-descriptor-set.cpp  vk-descriptor-set.hpp  vk-sampler.cpp  vk-sampler.hpp  vk-shader.cpp  vk-shader.hpp  vk-texture.cpp  vk-texture.hpp
graphics/backends/vulkan/vulkan-sync/: vk-barrier.hpp  vk-fence.cpp  vk-fence.hpp  vk-semaphore.cpp  vk-semaphore.hpp
graphics/capabilities/: device-capabilities.cpp  device-capabilities.hpp
graphics/command-execution/: command-buffer.hpp  command-pool.hpp  command-queue.hpp
graphics/pipeline-state/: compute-pipeline-state.hpp  graphics-pipeline-state.hpp  pipeline-state.hpp  raytracing-pipeline-state.hpp
graphics/render-pass/: framebuffer.hpp  render-pass.hpp  swapchain.hpp
graphics/render-resource/: buffer.hpp  descriptor-set.hpp  sampler.hpp  shader.hpp  texture.hpp
graphics/sync/: barrier.hpp  fence.hpp  semaphore.hpp
graphics/utils/: shader-compiler.hpp  shader-reflect.cpp  shader-reflect.hpp
tests/: CMakeLists.txt  test_macros.hpp
tests/headless/: headless_runner_tests.cpp
tests/render_core/: frame_context_tests.cpp  render_graph_tests.cpp  render_scene_extractor_tests.cpp  render_targets_tests.cpp  sensor_pass_tests.cpp
tests/rhi/: device_capabilities_tests.cpp  raytracing_capability_tests.cpp  resource_descriptor_tests.cpp
tests/smoke/: rhi_smoke.cpp
